hphp/test/zend/good/ext/gd/tests/copypalette.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('imagecolorat')) die("skip gd extension not available\n");
}
