hphp/test/zend/bad/ext/mysqli/tests/mysqli_get_charset.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');
if (!function_exists('mysqli_get_charset'))
	die("skip: function not available");
?>